k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: zayjar
  labels:
    app.kubernetes.io/part-of: zayjar
    app.kubernetes.io/managed-by: kustomize
